samples/_failures_safe/1761085124_982b97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd3c6771.c: In function ‘main’:
./samples/SAFE/__tmp_cd3c6771.c:157:9: error: expected declaration or statement at end of input
  157 |         }
      |         ^
./samples/SAFE/__tmp_cd3c6771.c:157:9: error: expected declaration or statement at end of input
